@@ -1,5 +1,9 @@
 2002-04-02  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
 
+	* src/pconfig.c (set_file): now that we do not
+	rely on server logic to add file monitor, we can add
+	monitor from the option callback.
+
 	* src/udp-server.c: make the size of our buffer 
 	compliant with what is specified in RFC 3164 (1024
 	bytes max per syslog messages).
